set packages installer to yarn

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "bootstrap": "npx lerna bootstrap",
     "clean": "rimraf dist && npx lerna run clean",
-    "build": "npm run build:packages && npm run build:main",
+    "build": "yarn run build:packages && yarn run build:main",
     "build:main": "tsc -p tsconfig.build.json",
     "build:packages": "npx lerna run build",
     "dev": "concurrently --kill-others 'tsc -p tsconfig.build.json --watch' 'npx lerna run --parallel build -- --watch'",
