--- a/.templates/package.json
+++ b/.templates/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "test": "jest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "yarn run build"
   },
   "dependencies": {
   },
