--- a/lerna.json
+++ b/lerna.json
@@ -4,10 +4,5 @@
   ],
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true,
-  "command": {
-    "run": {
-      "npmClient": "yarn"
-    }
-  }
+  "useWorkspaces": true
 }
