--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,13 +23,13 @@ jobs:
         node-version: [10.x, 13.x]
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: borales/actions-yarn@v2.0.0
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
       with:
-        cmd: bootstrap
-    - uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: build
-    - uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: test
+        node-version: ${{ matrix.node-version }}
+    - run: npm run bootstrap
+    - run: npm run build
+    - run: npm run test
+      env:
+        CI: true
